--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 <div class = "page"> 22e <br> why  <br> why</div>
 <div class = "page"> 333333333333333</div> -->
  <div class="page cover">
-    <h1 class="page-title">제 1장.</h1>
-    <p style="text-align:center; margin-top:2rem;">시작하려면 페이지를 넘기세요</p>
+   <img src="/img/cover.png" alt="coverImage"/>
   </div>
 
 <div class = "page">
@@ -60,7 +59,7 @@
 </section> -->
 
 <section class="page-subtitle">
-    '취업 시켜줄게' 미끼에 속아 끌려간 소녀들
+    "좋은 일자리라는 말만 믿었는데..."
 </section>
 
  <div class="page-body">
